Update RootDetector.java